--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Social media for developers",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Dillon Reyna",
   "license": "MIT",
@@ -21,6 +24,7 @@
     "validator": "^10.7.1"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
     "nodemon": "^1.18.4"
   }
 }
