--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "//": "^ Temporarily take out of production. Install node modules for client. Build on server."
+
   },
   "author": "Dillon Reyna",
   "license": "MIT",
