Added node version for heroku build

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "//": "^ Temporarily take out of production. Install node modules for client. Build on server."
-
   },
   "author": "Dillon Reyna",
+  "engines": {
+    "node": "10.2.1"
+  },
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
